qbs (1.3.3+dfsg-4) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Drop no longer needed chmod calls from debian/rules, thanks Jake
    Petroules for the suggestion.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 13 Feb 2015 12:45:44 +0300

qbs (1.3.3+dfsg-3) unstable; urgency=medium

  [ Pino Toscano ]
  * Add ${misc:Pre-Depends} to Pre-Depends for qbs, libqbscore1, and
    libqbsqtprofilesetup1.

  [ Adam Majer ]
  * Remove rpath from project include files used by 3rd party
    software. On Debian, rpath should not be set when referencing
    system installed libraries.

  [ Dmitry Shachnev ]
  * Add increase_timeout.diff from Dejan Latinovic to make tests pass
    on mips (closes: #774974).
  * Update debian/watch for new downloads server name.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 09 Jan 2015 19:46:15 +0300

qbs (1.3.3+dfsg-2) unstable; urgency=medium

  * Re-add skip_test.diff, seems to be still needed.
  * Update debian/copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 28 Dec 2014 20:31:27 +0300

qbs (1.3.3+dfsg-1) unstable; urgency=medium

  * New upstream bugfix release.
  * Drop no_gnu_hash.diff, applied upstream.
  * Drop skip_test.diff, no longer needed.
  * Add support for all MIPS flavors (closes: #767459).
  * Bump Breaks/Replaces on qtcreator, it is not fixed in Jessie.
  * Update debian/libqbscore1.symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 15 Dec 2014 17:44:26 +0300

qbs (1.3.2+dfsg-1) unstable; urgency=medium

  * New upstream bugfix release.
  * Add alpha, hppa and sparc64 support (closes: #764556).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 20 Oct 2014 16:53:29 +0400

qbs (1.3.1+dfsg-4) unstable; urgency=medium

  * Add upstream patch to not hardcode the linker hash style.
  * Add arm64 support.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 15 Oct 2014 21:29:30 +0400

qbs (1.3.1+dfsg-3) unstable; urgency=medium

  * Replace previous cleanup patch with a new patch that