@@ -3,6 +3,8 @@ qbs (1.3.3+dfsg-4) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * Drop no longer needed chmod calls from debian/rules, thanks Jake
     Petroules for the suggestion.
+  * Use qbs-config instead of modifying configuration files manually,
+    thanks Jake Petroules for the suggestion.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 13 Feb 2015 12:45:44 +0300
 
